tv-show-dom-projet-level-100

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <!-- Loads a provided function called getAllEpisodes() which returns all episodes -->
   <script src="episodes.js"></script>
 
-  <!-- Loads YOUR javascript code -->
+  <!-- Loads my javascript code -->
   <script src="script.js"></script>
 </body>
 
