Za2-Patou-Mabando-Tv-show-dom-project-Level100-To-Level300

--- a/index.html
+++ b/index.html
@@ -4,19 +4,24 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>TV Show Project | Patou Malongi Mabando (PatouMabando)</title>
   <link href="style.css" rel="stylesheet" />
   <link rel="icon" href="/favicon.ico" type="image/x-icon" />
+  <title>TV Show Project | Patou Malongi Mabando (PatouMabando)</title>
 </head>
 
 <body>
   <div id="root">
+    <div id="controls">
+      <select id="episodeSelect"></select>
+      <input id="searchInput" type="text" placeholder="your search term..." />
+      <span id="countDisplay">Displaying n episodes</span>
+    </div>
+    <div id="episodes"></div>
   </div>
 
-  <!-- Loads a provided function called getAllEpisodes() which returns all episodes -->
-  <script src="episodes.js"></script>
 
-  <!-- Loads my javascript code -->
+  <script src="episodes.js"></script>
+  
   <script src="script.js"></script>
 </body>
 
