ZA2-Patou-Mabando-Tv-Show-Week2

--- a/index.html
+++ b/index.html
@@ -6,23 +6,22 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link href="style.css" rel="stylesheet" />
   <link rel="icon" href="/favicon.ico" type="image/x-icon" />
-  <title>TV Show Project | Patou Malongi Mabando (PatouMabando)</title>
+  <title>TV Show Project Level 400 || Patou Malongi Mabando (PatouMabando)</title>
 </head>
 
 <body>
   <div id="root">
     <div id="controls">
+      <select id="showSelect"></select>  
       <select id="episodeSelect"></select>
       <input id="searchInput" type="text" placeholder="your search term..." />
       <span id="countDisplay">Displaying n episodes</span>
     </div>
     <div id="episodes"></div>
   </div>
-
-
-  <script src="episodes.js"></script>
   
   <script src="script.js"></script>
+  <script src="episodes.js"></script>
 </body>
 
 </html>
