--- a/index.html
+++ b/index.html
@@ -5,23 +5,43 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link href="style.css" rel="stylesheet" />
-  <link rel="icon" href="/favicon.ico" type="image/x-icon" />
-  <title>TV Show Project Level 400 || Patou Malongi Mabando (PatouMabando)</title>
+  <link href="https://fonts.googleapis.com/css2?family=Lora:wght@700&family=Merriweather&display=swap"
+    rel="stylesheet" />
+  <title>TV Show Project Level 500 || Patou Malongi Mabando (PatouMabando)</title>
 </head>
 
 <body>
   <div id="root">
-    <div id="controls">
-      <select id="showSelect"></select>  
-      <select id="episodeSelect"></select>
-      <input id="searchInput" type="text" placeholder="your search term..." />
-      <span id="countDisplay">Displaying n episodes</span>
+    <div id="episodesPage">
+      <header>
+        <div id="listShowsLink">Back to all shows</div>
+        <h1 id="showTitleHeader">Breaking Bad</h1>
+      </header>
+      <div id="controls">
+        <select id="episodeSelect"></select>
+        <input id="searchInput" type="text" placeholder="your search term..." />
+        <span id="countDisplay">Displaying n episodes</span>
+      </div>
+      <div id="episodes"></div>
     </div>
-    <div id="episodes"></div>
+
+    <div id="showsPage">
+      <header></header>
+      <div id="controlPanel">
+        <span class="control">Filtering for </span><input id="showsSearchInput" class="control" type="text"
+          placeholder="search for a show" value="mystery" />
+        <div class="control" id="filterSummary">?</div>
+        <select id="showSelect"></select>
+      </div>
+      <div>
+        <ul id="showsList"></ul>
+      </div>
+    </div>
   </div>
-  
+
+
   <script src="script.js"></script>
-  <script src="episodes.js"></script>
+  <script src="shows.js"></script>
 </body>
 
 </html>
